media request for mobile added

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
       </div>
 
       <footer class="footer">Proudly present by Johan Lång.
-      <div id="copyright"><img src="jpeg/copyright-symbol.png" alt="copyright symbol" title="copyright symbol" style="position: relative; width: 10px; height: 10px;"> All Rights Reserved.</div>
+      <div id="copyright"><img src="jpeg/copyright-symbol.png" alt="copyright symbol" title="copyright symbol" style="position: relative; width: 10px; height: 10px;"> All Rights Reserved. Gothenburg 180309</div>
       </footer>
 
   </body>
 
   <script src="script.js"></script>
-  
+
 </html>
