script add, changed

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
        <br>
        <br>
        <div id="target">
-       <input type="text" id="selectId" size="10" class="input"> <button class="button" id="modifyBook" onclick="modifyBook()">Modify</button>
-       <button class="button" id="deleteBook" onclick="deleteBook()">Delete</button>
+       <input type="text" id="selectId" size="10" class="input"> <button class="button" id="modifyBook">Modify</button>
+       <button class="button" id="deleteBook">Delete</button>
        <label></label>
           <input title="Confirm to delete" type="checkbox" id="confirmDelete" class="regular-checkbox" checked />
        </div>
