Sort function added

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
        <br>
        <button class="button" id="viewBooks">View Books, Title, Author</button> <button class="button" id="viewBooksAuthor">View Books, Author, Title</button>
        <br>
+       <button class="button" id="sortTitle">Sort, Title, Author</button> <button class="button" id="sortAuthor">Sort, Author, Title</button>
+       <br>
        <div id="selectedBookLibName"></div>
        <div id="header"></div>
-       <ul id="booklist"></ul>
+       <ol id="booklist"></ol>
 
 		</article>
 
