sort functon changed

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
          </select>
        <br>
        <br>
+       <!--<input type="text" id="searchTitle" class="input">
+       <br>
+       <br> -->
+       <br>
        <!-- <input type="text" id="newTitle" class="input"> <input type="text" id="newAuthor" class="input"> <button class="button" id="addBook" onclick="addBook()">Add</button> -->
        <input type="text" id="newTitle" class="input"> <input type="text" id="newAuthor" class="input"> <button class="button" id="addBook">Add</button>
        <br>
@@ -54,7 +58,7 @@
        <br>
        <div id="selectedBookLibName"></div>
        <div id="header"></div>
-       <ol id="booklist"></ol>
+       <div id="booklist"></div>
 
 		</article>
 
