--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
          </select>
        <br>
        <br>
-       <!--<input type="text" id="searchTitle" class="input">
+       <input type="text" id="searchTitle" class="input">
        <br>
-       <br> -->
+       <br>
        <br>
        <!-- <input type="text" id="newTitle" class="input"> <input type="text" id="newAuthor" class="input"> <button class="button" id="addBook" onclick="addBook()">Add</button> -->
        <input type="text" id="newTitle" class="input"> <input type="text" id="newAuthor" class="input"> <button class="button" id="addBook">Add</button>
@@ -77,7 +77,7 @@
 
     </div>
 
-  <footer class="footer">Proudly present by Johan Lång.
+  <footer class="footer">Proudly presented by Johan Lång.
     <div id="copyright"><img src="jpeg/copyright-symbol.png" alt="copyright symbol" title="copyright symbol" style="position: relative; width: 10px; height: 10px;"> All Rights Reserved. Gothenburg 180309</div>
   </footer>
 
